fix alignment of fullname in title

--- a/webapp/channels/src/components/profile_popover/index.scss
+++ b/webapp/channels/src/components/profile_popover/index.scss
@@ -95,6 +95,7 @@
             display: flex;
             flex-wrap: nowrap;
             text-align: center;
+            justify-content: center ;
             margin-block-end: 4px;
             
             > span {
